--- a/src/stories/square-and-close.css
+++ b/src/stories/square-and-close.css
@@ -20,7 +20,7 @@
 }
 
 .close-button:hover {
-    color: #333;
+    color: #e00909;
     background-color: #eee;
 }
 
@@ -44,6 +44,6 @@
 
 .closable-square--closed {
     background-color: #ddd;
-    border-color: #999;
+    border-color: #070ae1;
     opacity: 0.7;
 }
